--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "Digitacao",
         "Edicao",
         "endereco",
-        "inclusao"
+        "inclusao",
+        "Vinny",
+        "Vynicios"
     ]
 }
